After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697959 - Incorrect time shows briefly when song changes
Incorrect time shows briefly when song changes
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: User Interface
HEAD
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-13 17:17 UTC by Ross Lagerwall
Modified: 2013-04-18 22:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix for the issue (1.03 KB, patch)
2013-04-13 17:17 UTC, Ross Lagerwall
committed Details | Review

Description Ross Lagerwall 2013-04-13 17:17:31 UTC
Created attachment 241457 [details] [review]
fix for the issue

Sometimes when the song changes, the remaining time
and progress bar briefly change to the wrong value
before correcting themselves.

The following patch explains it in more detail:

commit 0476e30272751f0c4d98768026d927a5a3935ca2
Author: Ross Lagerwall <rosslagerwall@gmail.com>
Date:   Sat Apr 13 18:08:01 2013 +0100

    widget: reset elapsed time when song changes
    
    This stops a brief flicker sometimes visible where
    rb_header_playing_song_changed_cb is called before
    rb_header_elapsed_changed_cb and so the duration of the song is
    updated but the previous elapsed time still remains. It causes a
    flicker of the incorrect time remaining and the progress slider to
    briefly move to a new location.
Comment 1 Jonathan Matthew 2013-04-18 22:33:25 UTC
pushed as commit e154c10, thanks
Comment 2 Jonathan Matthew 2013-04-18 22:33:49 UTC
Review of attachment 241457 [details] [review]:

.
Comment 3 Jonathan Matthew 2013-04-18 22:34:10 UTC
Review of attachment 241457 [details] [review]:

er